Tests/JTran.Transform.UnitTests/Test Transforms/SyntaxErrors/expression1.jtran
{
    "#foreach(Customers)":
    {
        "LastName":    "#(Surname)",
        "FirstName":   "#(bob !!!*** ted)",
        "Age":         "#(Age)",
        "Address":     "#(Address)"
    }
}